develop: fix button overflow in header

--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -10,7 +10,7 @@
 		background-image: url(../../images/header-bg.png);
 		background-position: top;
 		background-size: cover;
-		z-index: 9997;
+		z-index: 9996;
 	}
 
 	&__left {
@@ -58,7 +58,7 @@
 	}
 
 	.btn {
-		z-index: 9998;
+		z-index: 9997;
 	}
 
 	&__right {
