--- a/styles/scss/_navigation.scss
+++ b/styles/scss/_navigation.scss
@@ -24,6 +24,7 @@
 		justify-content: space-around;
 		width: 70%;
 		margin: 0;
+		z-index: 9999;
 	}
 
 	&__item {
