--- a/styles/scss/_sections.scss
+++ b/styles/scss/_sections.scss
@@ -165,8 +165,7 @@
 	background-image: url(../../images/our-credibility.png);
 	background-position: right;
 	background-size: contain;
-		background-repeat: no-repeat;
-
+	background-repeat: no-repeat;
 
 	&__left {
 		width: 65%;
@@ -174,7 +173,7 @@
 		display: flex;
 		flex-direction: column;
 		background-image: linear-gradient(90deg, rgb(255, 177, 1) 0%, rgb(255, 177, 1) 75%, rgb(255, 177, 0.9) 100%);
-
+		
 		.h2,
 		.text {
 			color: white;
@@ -231,8 +230,7 @@
 		}
 
 		&__right {
-			height: 35rem;
-				
+			display: none;
 		}
 
 		img {
